# The MIT License (MIT)
#
# Copyright (c) 2022-2025 Objectionary.com
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
# in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "sodg"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/objectionary/sodg"
description = "Surging Object DiGraph (SODG)"
readme = "README.md"
license-file = "LICENSE.txt"
homepage = "https://github.com/objectionary/sodg"
keywords = ["graph", "oop"]
categories = ["data-structures", "memory-management"]

[features]
gc = []

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
ctor = "0.2.4"
emap = {version = "0.0.13", features = ["serde"] }
hex = "0.4.3"
itertools = "0.14.0"
lazy_static = "1.4.0"
libc = "0.2.142"
log = "0.4.20"
micromap = { version = "0.0.15", features = ["serde"] }
microstack = { version = "0.0.7", features = ["serde"] }
nohash-hasher = "0.2.0"
openssl = { version = "0.10.68", features = ["vendored"] }
regex = "1.9.3"
rstest = "0.23.0"
rustc-hash = "2.0.0"
serde = { version = "1.0.162", features = ["derive"] }
simple_logger = "5.0.0"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
tinymap = "0.4.0"
xml-builder = "0.5.2"

[dev-dependencies]
fsutils = "0.1.7"
predicates = "3.0.3"
tempfile = "3.8.0"
